new Boolean() -> Boolean.valueOf()
git-svn-id: https://svn.apache.org/repos/asf/jakarta/jmeter/branches/rel-2-1@333107 13f79535-47bb-0310-9956-ffa450edef68

Former-commit-id: 55efbaea064010c70b66eb130be6bc40430b5191